docs(05): complete Attachment Manager Foundation phase
Phase 5 verified with 4/4 must-haves:
- AttachmentManager tracks volume-to-node attachments in memory
- State persists to PV annotations via retry.RetryOnConflict
- Per-volume locks prevent race conditions
- State rebuilds from PV annotations on startup

Requirements completed: FENCE-01, FENCE-02, FENCE-03, FENCE-04
Test coverage: 87.5% (19 tests, all pass with -race)

--- a/.planning/milestones/v0.3-REQUIREMENTS.md
+++ b/.planning/milestones/v0.3-REQUIREMENTS.md
@@ -9,10 +9,10 @@ Requirements for volume fencing release. Each maps to roadmap phases.
 
 ### Attachment Tracking
 
-- [ ] **FENCE-01**: AttachmentManager tracks volume-to-node attachments in memory with sync.RWMutex
-- [ ] **FENCE-02**: Attachment state persisted to PV annotations (rds.csi.srvlab.io/attached-node)
-- [ ] **FENCE-03**: Attachment state rebuilt from PV annotations on controller startup
-- [ ] **FENCE-04**: Per-volume locking prevents race conditions during concurrent publish requests
+- [x] **FENCE-01**: AttachmentManager tracks volume-to-node attachments in memory with sync.RWMutex
+- [x] **FENCE-02**: Attachment state persisted to PV annotations (rds.csi.srvlab.io/attached-node)
+- [x] **FENCE-03**: Attachment state rebuilt from PV annotations on controller startup
+- [x] **FENCE-04**: Per-volume locking prevents race conditions during concurrent publish requests
 - [ ] **FENCE-05**: Background reconciliation detects and cleans stale attachments
 - [ ] **FENCE-06**: Reattachment grace period (30s default) prevents false conflicts during KubeVirt migrations
 
@@ -52,10 +52,10 @@ Deferred to later milestones.
 
 | Requirement | Phase | Status |
 |-------------|-------|--------|
-| FENCE-01 | Phase 5 | Pending |
-| FENCE-02 | Phase 5 | Pending |
-| FENCE-03 | Phase 5 | Pending |
-| FENCE-04 | Phase 5 | Pending |
+| FENCE-01 | Phase 5 | Complete |
+| FENCE-02 | Phase 5 | Complete |
+| FENCE-03 | Phase 5 | Complete |
+| FENCE-04 | Phase 5 | Complete |
 | FENCE-05 | Phase 7 | Pending |
 | FENCE-06 | Phase 7 | Pending |
 | CSI-01 | Phase 6 | Pending |
@@ -79,4 +79,4 @@ Deferred to later milestones.
 
 ---
 *Requirements defined: 2026-01-31*
-*Last updated: 2026-01-31 after roadmap creation*
+*Last updated: 2026-01-31 after Phase 5 completion*
