--- a/.planning/milestones/v0.3-ROADMAP.md
+++ b/.planning/milestones/v0.3-ROADMAP.md
@@ -24,8 +24,8 @@ This roadmap prevents volume ping-pong between nodes by implementing ControllerP
 
 Plans:
 - [x] 05-01-PLAN.md — Core AttachmentManager with types, locks, in-memory tracking
-- [ ] 05-02-PLAN.md — PV annotation persistence, state rebuild, driver integration
-- [ ] 05-03-PLAN.md — Comprehensive unit tests
+- [x] 05-02-PLAN.md — PV annotation persistence, state rebuild, driver integration
+- [x] 05-03-PLAN.md — Comprehensive unit tests
 
 **Details:**
 - AttachmentManager with sync.RWMutex for thread-safe in-memory tracking
