docs(06): create phase plan for CSI Publish/Unpublish
Phase 06: CSI Publish/Unpublish Implementation
- 3 plans in 3 waves
- 2 parallel (wave 1), 1 sequential (waves 2, 3)
- Covers requirements CSI-01 through CSI-06

Plans:
- 06-01: Capability declaration + conflict events (wave 1)
- 06-02: ControllerPublishVolume + ControllerUnpublishVolume (wave 2)
- 06-03: Comprehensive unit tests (wave 3)

--- a/.planning/milestones/v0.3-ROADMAP.md
+++ b/.planning/milestones/v0.3-ROADMAP.md
@@ -2,7 +2,7 @@
 
 **Status:** In Progress
 **Phases:** 5-7
-**Total Plans:** 3 (Phase 5), TBD (Phases 6-7)
+**Total Plans:** 3 (Phase 5), 3 (Phase 6), TBD (Phase 7)
 
 ## Overview
 
@@ -37,7 +37,7 @@ Plans:
 **Goal**: Driver enforces ReadWriteOnce semantics through CSI ControllerPublishVolume and ControllerUnpublishVolume
 **Depends on**: Phase 5
 **Requirements**: CSI-01, CSI-02, CSI-03, CSI-04, CSI-05, CSI-06
-**Plans**: TBD
+**Plans**: 3 plans in 3 waves
 
 **Success Criteria** (what must be TRUE):
 1. ControllerPublishVolume returns OK if volume already attached to the same node (idempotent)
@@ -48,7 +48,9 @@ Plans:
 6. ControllerPublishVolume returns publish_context with NVMe connection parameters (address, port, nqn)
 
 Plans:
-- TBD (pending phase planning)
+- [ ] 06-01-PLAN.md — Capability declaration and conflict event posting
+- [ ] 06-02-PLAN.md — ControllerPublishVolume and ControllerUnpublishVolume implementation
+- [ ] 06-03-PLAN.md — Comprehensive unit tests
 
 **Details:**
 - Implement ControllerPublishVolume with attachment tracking integration
