docs(06): complete CSI Publish/Unpublish phase
Phase 6 verified: 6/6 must-haves confirmed in codebase
- CSI-01: Idempotent same-node publish returns success
- CSI-02: FAILED_PRECONDITION (code 9) for RWO conflicts
- CSI-03: Idempotent unpublish returns success
- CSI-04: PUBLISH_UNPUBLISH_VOLUME capability declared
- CSI-05: publish_context with nvme_address, nvme_port, nvme_nqn, fs_type
- CSI-06: Node validation with auto-clear for deleted blocking nodes

3 plans executed, 13 unit tests pass with race detection.

--- a/.planning/milestones/v0.3-ROADMAP.md
+++ b/.planning/milestones/v0.3-ROADMAP.md
@@ -48,9 +48,9 @@ Plans:
 6. ControllerPublishVolume returns publish_context with NVMe connection parameters (address, port, nqn)
 
 Plans:
-- [ ] 06-01-PLAN.md — Capability declaration and conflict event posting
-- [ ] 06-02-PLAN.md — ControllerPublishVolume and ControllerUnpublishVolume implementation
-- [ ] 06-03-PLAN.md — Comprehensive unit tests
+- [x] 06-01-PLAN.md — Capability declaration and conflict event posting
+- [x] 06-02-PLAN.md — ControllerPublishVolume and ControllerUnpublishVolume implementation
+- [x] 06-03-PLAN.md — Comprehensive unit tests
 
 **Details:**
 - Implement ControllerPublishVolume with attachment tracking integration
