docs(07): create phase plan
Phase 07: Robustness and Observability
- 3 plans in 3 waves
- 2 parallel (foundation), 1 sequential (tests)
- Ready for execution

--- a/.planning/milestones/v0.3-ROADMAP.md
+++ b/.planning/milestones/v0.3-ROADMAP.md
@@ -2,7 +2,7 @@
 
 **Status:** In Progress
 **Phases:** 5-7
-**Total Plans:** 3 (Phase 5), 3 (Phase 6), TBD (Phase 7)
+**Total Plans:** 3 (Phase 5), 3 (Phase 6), 3 (Phase 7)
 
 ## Overview
 
@@ -63,7 +63,7 @@ Plans:
 **Goal**: Production operators can monitor attachment conflicts and driver handles stale state gracefully
 **Depends on**: Phase 6
 **Requirements**: FENCE-05, FENCE-06, OBS-01, OBS-02
-**Plans**: TBD
+**Plans**: 3 plans in 3 waves
 
 **Success Criteria** (what must be TRUE):
 1. Background reconciliation detects and cleans stale attachments from deleted nodes
@@ -72,7 +72,9 @@ Plans:
 4. Kubernetes events posted to PVCs for attachment conflicts and errors
 
 Plans:
-- TBD (pending phase planning)
+- [ ] 07-01-PLAN.md — Grace period tracking and Prometheus attachment metrics
+- [ ] 07-02-PLAN.md — Background attachment reconciler with stale cleanup
+- [ ] 07-03-PLAN.md — Comprehensive unit tests
 
 **Details:**
 - Background reconciler runs every 5 minutes to detect stale attachments
