docs(09): complete implement-fix phase
Phase 9 verified: 8/8 must-haves confirmed

- Custom KubeVirt images built and pushed (CI workflow 21549308226)
- Metal cluster running patched virt-controller
- Multi-volume hotplug validated without VM pause
- Volume removal confirmed working
- Fix implemented in allHotplugVolumesReady()
- 5 unit tests added covering bug reproduction and regression

VERIFICATION: .planning/phases/09-implement-fix/09-VERIFICATION.md

--- a/.planning/phases/09-implement-fix/09-01-PLAN.md
+++ b/.planning/phases/09-implement-fix/09-01-PLAN.md
@@ -94,8 +94,9 @@ Keep the document concise - focus on the specific bug, not general architecture.
   </action>
   <verify>
     - File .planning/phases/09-implement-fix/09-01-CODEPATH.md exists
-    - Document explains the race condition clearly
-    - Document identifies exact fix location
+    - grep -q "cleanupAttachmentPods" 09-01-CODEPATH.md (fix location identified)
+    - grep -q "VolumeReady\|VolumeStatus" 09-01-CODEPATH.md (readiness check mentioned)
+    - grep -qi "race\|premature\|before.*ready" 09-01-CODEPATH.md (race condition explained)
   </verify>
   <done>
     Code path documented with clear identification of bug location and fix approach
@@ -140,6 +141,12 @@ Keep the document concise - focus on the specific bug, not general architecture.
    - Does NOT break single-volume hotplug (still works same as before)
    - Does NOT break volume removal (removal uses different path)
    - Uses existing VolumeStatus.Phase field (no new fields needed)
+
+7. Handle edge cases:
+   - Empty VolumeStatus: If no VolumeStatus entries, don't block deletion (no volumes to protect)
+   - New pod not created yet: If new pod doesn't exist, don't delete old pod (wait for next reconcile)
+   - Volume removal scenario: Only check readiness for volumes being ADDED, not removed
+   - Mixed states: If ANY hotplug volume is not ready, keep old pod alive
 
 7. Commit the change:
    ```bash
