--- a/.planning/phases/09-implement-fix/09-02-PLAN.md
+++ b/.planning/phases/09-implement-fix/09-02-PLAN.md
@@ -71,11 +71,13 @@ KubeVirt uses Ginkgo/Gomega for testing. Follow existing test patterns.
 
 3. Add test cases for the fix (using Ginkgo/Gomega patterns):
 
-   **Test Case 1: Old pod NOT deleted when new pod volumes not ready**
+   **Test Case 1: Old pod NOT deleted when new pod volumes not ready (BUG REPRODUCTION + FIX)**
+   - This test reproduces the original bug: it would FAIL on unpatched KubeVirt (old pod deleted prematurely) and PASS with our fix
    - Setup: VMI with 2 volumes, VolumeStatus for vol1 = VolumeReady, vol2 = VolumePending
    - Setup: Old attachment pod exists with vol1, new pod exists with vol1+vol2
    - Action: Call cleanupAttachmentPods
    - Assert: Old pod NOT deleted (still exists in client)
+   - Note: This satisfies KVFIX-02 "Create test case that reliably reproduces the issue"
 
    **Test Case 2: Old pod deleted when all new pod volumes ready**
    - Setup: VMI with 2 volumes, both VolumeStatus = VolumeReady
