docs(10): create phase plan for upstream contribution
Phase 10: Upstream Contribution
- 2 plans in 2 waves
- 10-01: Prepare commits (DCO sign-off, rebase, clean markers)
- 10-02: Open PR and handle initial review

Ready for execution

--- a/.planning/milestones/v0.5-ROADMAP.md
+++ b/.planning/milestones/v0.5-ROADMAP.md
@@ -75,14 +75,18 @@ Plans:
 4. Maintainer feedback addressed
 5. (Stretch) PR merged
 
+**Plans:** 2 plans
+
 Plans:
-- [ ] 10-01-PLAN.md — Prepare PR with tests and documentation
-- [ ] 10-02-PLAN.md — Address review feedback
+- [ ] 10-01-PLAN.md — Prepare commits (DCO sign-off, rebase on main, clean focused test markers)
+- [ ] 10-02-PLAN.md — Open PR and handle initial review
 
 **Details:**
-- Follow KubeVirt contribution guidelines
+- Follow KubeVirt contribution guidelines (DCO sign-off mandatory)
 - Reference issues #6564, #9708, #16520
-- Include detailed commit message explaining the fix
+- Include detailed PR description with before/after explanation
+- Include release notes block for user-facing changelog
+- Be prepared for `/ok-to-test` approval wait (first-time contributor)
 - Be prepared for multiple review cycles
 
 ---
