feat(10-01): create clean upstream-pr branch with DCO sign-off
- Created upstream-pr branch from upstream/main
- Cherry-picked fix commit (cc1b700 -> dde549140a)
- Cherry-picked test commit (6546421 -> d9622dd922)
- Added DCO sign-off to both commits
- Verified only fix files included (no CI workflows)
- Pushed to whiskey-works/kubevirt fork

Branch ready for upstream PR to kubevirt/kubevirt.

--- a/.planning/phases/10-upstream-contribution/10-01-PLAN.md
+++ b/.planning/phases/10-upstream-contribution/10-01-PLAN.md
@@ -11,7 +11,8 @@ autonomous: true
 must_haves:
   truths:
     - "All commits have DCO sign-off (Signed-off-by line)"
-    - "Branch is rebased on upstream main"
+    - "Branch contains ONLY fix commits (no CI workflow files)"
+    - "Branch is based on upstream main"
     - "Commit messages follow conventional format"
     - "No focused test markers (FDescribe, FIt) in code"
   artifacts:
@@ -22,10 +23,10 @@ must_haves:
       provides: "Unit tests for fix"
       contains: "should NOT delete old pod when new pod volumes are not ready"
   key_links:
-    - from: "hotplug-fix-v1 branch"
+    - from: "upstream-pr branch"
       to: "upstream kubevirt/kubevirt main"
-      via: "git rebase"
-      pattern: "rebased on upstream main"
+      via: "cherry-pick"
+      pattern: "clean branch with only fix commits"
 ---
 
 <objective>
@@ -99,63 +100,80 @@ Output: Clean git history with DCO-signed commits rebased on upstream main
 </task>
 
 <task type="auto">
-  <name>Task 3: Rebase on upstream main and add DCO sign-off</name>
+  <name>Task 3: Create clean branch with only fix commits (no CI cruft)</name>
   <files>/tmp/kubevirt-fork (git history)</files>
   <action>
-    1. First, check if commits already have sign-off:
-       `git log --format="%B" HEAD~2..HEAD | grep -c "Signed-off-by" || echo "0"`
+    IMPORTANT: The hotplug-fix-v1 branch has CI workflow commits mixed in that must NOT
+    be included in the upstream PR:
+    - 708d58b ci: build arm64 images for DPU cluster        ❌ exclude
+    - b9b3e09 ci: add unit test job before build            ❌ exclude
+    - 6546421 test(hotplug): add unit tests...              ✅ include
+    - cc1b700 fix(hotplug): wait for new pod volumes...     ✅ include
+    - 4992a14 ci: add GitHub Actions workflow...            ❌ exclude
 
-    2. Rebase interactively to squash fix and test into proper commits with sign-off:
-       NOTE: We need to maintain separate commits but ensure each has DCO sign-off.
+    Create a clean branch by cherry-picking only the fix commits:
 
-       Option A - If commits already have sign-off, just rebase on main:
+    1. Create new branch from upstream main:
        ```bash
-       git rebase upstream/main
+       git checkout upstream/main
+       git checkout -b upstream-pr
        ```
 
-       Option B - If sign-off missing, rebase with sign-off amendment:
+    2. Cherry-pick ONLY the fix commits (in order):
+       ```bash
+       git cherry-pick cc1b700   # fix implementation
+       git cherry-pick 6546421   # unit tests
+       ```
+
+    3. Add DCO sign-off to both commits:
        ```bash
        git rebase --exec 'git commit --amend --no-edit -n -s' -i upstream/main
        ```
 
-       This adds Signed-off-by to each commit during rebase.
+    4. Verify the branch has ONLY the fix files (no .github/workflows):
+       ```bash
+       git diff --name-only upstream/main...HEAD
+       ```
+       Should show ONLY:
+       - pkg/virt-controller/watch/vmi/volume-hotplug.go
+       - pkg/virt-controller/watch/vmi/vmi_test.go
 
-    3. Resolve any conflicts during rebase (unlikely for isolated fix).
-
-    4. After rebase, verify sign-off present on all commits:
-       `git log --format="%B" HEAD~2..HEAD | grep "Signed-off-by"`
-
-    5. Force push to origin (our fork):
-       `git push -f origin hotplug-fix-v1`
+    5. Push to fork:
+       ```bash
+       git push -u origin upstream-pr
+       ```
 
     IMPORTANT: The sign-off email must match a verified email on the GitHub account.
     Check with: `git config user.email`
   </action>
   <verify>
-    - `git log --oneline upstream/main..HEAD` shows our commits on top of upstream main
+    - `git branch` shows upstream-pr checked out
+    - `git log --oneline upstream/main..HEAD` shows exactly 2 commits (fix + tests)
+    - `git diff --name-only upstream/main..HEAD` shows only volume-hotplug.go and vmi_test.go (NO .github/)
     - Each commit has "Signed-off-by:" line visible in `git log -2 --format=full`
-    - `git push -f origin hotplug-fix-v1` succeeds
+    - `git push -u origin upstream-pr` succeeds
   </verify>
-  <done>Commits rebased on upstream main with DCO sign-off, pushed to fork</done>
+  <done>Clean branch upstream-pr created with only fix commits, pushed to fork</done>
 </task>
 
 </tasks>
 
 <verification>
-1. Fork at /tmp/kubevirt-fork is on hotplug-fix-v1 branch
+1. Fork at /tmp/kubevirt-fork has upstream-pr branch
 2. Upstream remote points to kubevirt/kubevirt
 3. No focused test markers (FDescribe, FIt) in test file
 4. All commits have Signed-off-by line
-5. Branch rebased on upstream/main
-6. Changes pushed to origin (whiskey-works/kubevirt)
+5. Branch contains ONLY fix commits (no CI workflow files)
+6. upstream-pr branch pushed to origin (whiskey-works/kubevirt)
 </verification>
 
 <success_criteria>
 - `git remote get-url upstream` returns https://github.com/kubevirt/kubevirt.git
 - `grep -c "FDescribe\|FIt\|FContext" /tmp/kubevirt-fork/pkg/virt-controller/watch/vmi/vmi_test.go` returns 0 or "No such file"
 - `git log --format="%B" HEAD~2..HEAD | grep -c "Signed-off-by"` returns 2 or more
-- `git log --oneline upstream/main..HEAD | wc -l` returns at least 1 (our commits)
-- Remote branch pushed successfully
+- `git log --oneline upstream/main..HEAD | wc -l` returns exactly 2 (fix + tests)
+- `git diff --name-only upstream/main..HEAD` does NOT include .github/ (no CI cruft)
+- `git push -u origin upstream-pr` succeeds
 </success_criteria>
 
 <output>
