--- a/.planning/phases/10-upstream-contribution/10-02-PLAN.md
+++ b/.planning/phases/10-upstream-contribution/10-02-PLAN.md
@@ -132,13 +132,13 @@ Output: PR URL, documented process for handling review feedback
        gh pr create \
          --repo kubevirt/kubevirt \
          --base main \
-         --head whiskey-works:hotplug-fix-v1 \
+         --head whiskey-works:upstream-pr \
          --title "fix(hotplug): wait for new pod volumes ready before deleting old pod" \
          --body-file /Users/whiskey/code/rds-csi/.planning/phases/10-upstream-contribution/10-02-PR-DESCRIPTION.md
        ```
 
     4. If gh CLI not authenticated to kubevirt org, use web UI alternative:
-       - Go to https://github.com/kubevirt/kubevirt/compare/main...whiskey-works:kubevirt:hotplug-fix-v1
+       - Go to https://github.com/kubevirt/kubevirt/compare/main...whiskey-works:kubevirt:upstream-pr
        - Use the description from 10-02-PR-DESCRIPTION.md
 
     5. Record the PR URL for future reference.
