docs(08): update roadmap with phase 08 plan details

--- a/.planning/milestones/v0.5-ROADMAP.md
+++ b/.planning/milestones/v0.5-ROADMAP.md
@@ -1,8 +1,8 @@
 # Milestone v0.5: KubeVirt Live Migration
 
-**Status:** Not Started
+**Status:** In Progress
 **Phases:** 8-10
-**Total Plans:** TBD
+**Total Plans:** 3 (Phase 8) + TBD (Phases 9-10)
 
 ## Overview
 
@@ -14,7 +14,7 @@ This roadmap enables KubeVirt VM live migration with RDS CSI volumes. Three phas
 **Goal**: KubeVirt VMs can live migrate using RWX block PVCs
 **Depends on**: Phase 7 (Robustness and Observability from v0.3)
 **Requirements**: RWX-01, RWX-02, RWX-03
-**Plans**: TBD
+**Plans**: 3 plans in 3 waves
 
 **Success Criteria** (what must be TRUE):
 1. User can create PVC with `accessModes: [ReadWriteMany]` and `volumeMode: Block` that is accepted by the driver
@@ -90,7 +90,9 @@ Plans:
 **Decimal Phases:** None (no urgent insertions yet)
 
 **Key Decisions:**
-- TBD (will be captured during planning and execution)
+- ROADMAP-4: RWX block-only, reject RWX filesystem (prevents data corruption)
+- ROADMAP-5: 2-node limit during migration (sufficient for KubeVirt, prevents misuse)
+- ROADMAP-6: Trust QEMU for I/O coordination (driver permits dual-attach, doesn't coordinate)
 
 **Issues Targeted:**
 - VMs show "Live Migration: false" due to missing RWX support
