fix(08): revise plans based on checker feedback
Phase 08: Core RWX Capability

08-01-PLAN.md:
- Clarified Task 2 updates EXISTING validateVolumeCapabilities function
- Added line references and explicit "modification, not new function" note

08-02-PLAN.md:
- Fixed Task 2: TrackAttachment signature unchanged for backward compat
- Added TrackAttachmentWithMode as new method for access-mode awareness
- Fixed Task 3: Removed getAccessMode helper, inline check instead
- CSI ControllerPublishVolume uses singular GetVolumeCapability(), not slice

--- a/.planning/phases/08-core-rwx-capability/08-01-PLAN.md
+++ b/.planning/phases/08-core-rwx-capability/08-01-PLAN.md
@@ -86,19 +86,17 @@ addVolumeCapabilities() includes MULTI_NODE_MULTI_WRITER in the vcaps slice.
 </task>
 
 <task type="auto">
-  <name>Task 2: Implement RWX validation in CreateVolume</name>
+  <name>Task 2: Add RWX+block validation to existing validateVolumeCapabilities</name>
   <files>pkg/driver/controller.go</files>
   <action>
-Modify `validateVolumeCapabilities()` to accept RWX but reject RWX+filesystem:
-
-1. Update the validateVolumeCapabilities function to include RWX-specific validation:
+Update the EXISTING `validateVolumeCapabilities` function (at ~line 765) to add RWX-specific validation. This function already validates access modes and access types - add the RWX+block constraint after the existing checks:
 
 ```go
+// validateVolumeCapabilities checks if the requested capabilities are supported
 func (cs *ControllerServer) validateVolumeCapabilities(caps []*csi.VolumeCapability) error {
     for _, cap := range caps {
+        // Check access mode (EXISTING CODE)
         accessMode := cap.GetAccessMode().GetMode()
-
-        // Check access mode is supported
         supported := false
         for _, supportedMode := range cs.driver.vcaps {
             if accessMode == supportedMode.GetMode() {
@@ -106,16 +104,17 @@ func (cs *ControllerServer) validateVolumeCapabilities(caps []*csi.VolumeCapabil
                 break
             }
         }
+
         if !supported {
             return fmt.Errorf("access mode %v is not supported", accessMode)
         }
 
-        // Check access type (must be block or mount)
+        // Check access type (must be block or mount) (EXISTING CODE)
         if cap.GetBlock() == nil && cap.GetMount() == nil {
             return fmt.Errorf("volume capability must specify either block or mount")
         }
 
-        // ROADMAP-4: RWX block-only validation
+        // NEW: RWX block-only validation (ROADMAP-4)
         // RWX with filesystem volumes risks data corruption - reject with actionable error
         if accessMode == csi.VolumeCapability_AccessMode_MULTI_NODE_MULTI_WRITER {
             if cap.GetMount() != nil {
@@ -127,52 +126,24 @@ func (cs *ControllerServer) validateVolumeCapabilities(caps []*csi.VolumeCapabil
             klog.V(2).Info("RWX block volume capability validated (KubeVirt live migration use case)")
         }
     }
+
     return nil
 }
 ```
 
-2. The existing CreateVolume already calls validateVolumeCapabilities before provisioning, so RWX+filesystem will fail fast with a clear error.
+This is a modification to the existing validateVolumeCapabilities function, not a new function. The existing CreateVolume already calls this function at line 66, so RWX+filesystem will fail fast with a clear error.
 
-3. Also update ValidateVolumeCapabilities to return "unconfirmed" (not error) for RWX+filesystem on pre-provisioned volumes, matching CSI spec semantics:
-
-In the ValidateVolumeCapabilities method, check if RWX+filesystem was attempted and return unconfirmed with message instead of confirmed:
-
-```go
-func (cs *ControllerServer) ValidateVolumeCapabilities(ctx context.Context, req *csi.ValidateVolumeCapabilitiesRequest) (*csi.ValidateVolumeCapabilitiesResponse, error) {
-    // ... existing validation ...
-
-    // Check if volume exists
-    if _, err := cs.driver.rdsClient.GetVolume(volumeID); err != nil {
-        return nil, status.Errorf(codes.NotFound, "volume %s not found: %v", volumeID, err)
-    }
-
-    // Validate capabilities - for pre-provisioned volumes, return unconfirmed rather than error
-    if err := cs.validateVolumeCapabilities(req.GetVolumeCapabilities()); err != nil {
-        // For RWX+filesystem, return unconfirmed with warning message
-        return &csi.ValidateVolumeCapabilitiesResponse{
-            Message: err.Error(),
-        }, nil
-    }
-
-    return &csi.ValidateVolumeCapabilitiesResponse{
-        Confirmed: &csi.ValidateVolumeCapabilitiesResponse_Confirmed{
-            VolumeCapabilities: req.GetVolumeCapabilities(),
-        },
-    }, nil
-}
-```
-
-This is the existing behavior - no change needed, just verify it works correctly.
+The existing ValidateVolumeCapabilities method (line 271) already returns an unconfirmed response when validateVolumeCapabilities returns an error (lines 290-294), so no changes needed there.
   </action>
   <verify>
 Run `go build ./...` to verify compilation.
 Run `make test` to ensure existing tests pass.
-Grep for "RWX access mode requires volumeMode: Block" to confirm error message.
+Grep for "RWX access mode requires volumeMode: Block" to confirm error message is present.
   </verify>
   <done>
-- validateVolumeCapabilities accepts RWX+block
+- validateVolumeCapabilities accepts RWX+block (no error)
 - validateVolumeCapabilities rejects RWX+filesystem with actionable error message
-- ValidateVolumeCapabilities returns unconfirmed (not error) for unsupported combos
+- ValidateVolumeCapabilities returns unconfirmed (not error) for unsupported combos (existing behavior preserved)
   </done>
 </task>
 
