--- a/.planning/phases/08-core-rwx-capability/08-02-PLAN.md
+++ b/.planning/phases/08-core-rwx-capability/08-02-PLAN.md
@@ -157,14 +157,27 @@ Run `go build ./pkg/attachment/...` to verify no syntax errors.
   <name>Task 2: Update AttachmentManager for dual-attach support</name>
   <files>pkg/attachment/manager.go</files>
   <action>
-Modify manager.go to support RWX dual-attachment:
+Modify manager.go to support RWX dual-attachment. IMPORTANT: Do NOT change the existing TrackAttachment signature - this would break all existing callers.
 
-1. Update TrackAttachment to initialize Nodes slice and accept access mode:
+1. Keep existing TrackAttachment signature unchanged - it will continue to work for RWO attachments:
 
 ```go
 // TrackAttachment records that a volume is attached to a node.
-// accessMode should be "RWO" or "RWX" to determine if dual-attach is allowed.
-func (am *AttachmentManager) TrackAttachment(ctx context.Context, volumeID, nodeID, accessMode string) error {
+// This method is idempotent - if the volume is already attached to the same node,
+// it returns nil. If the volume is attached to a different node, it returns an error.
+// For RWX dual-attach, use TrackAttachmentWithMode or AddSecondaryAttachment instead.
+func (am *AttachmentManager) TrackAttachment(ctx context.Context, volumeID, nodeID string) error {
+    // Call TrackAttachmentWithMode with default "RWO" for backward compatibility
+    return am.TrackAttachmentWithMode(ctx, volumeID, nodeID, "RWO")
+}
+```
+
+2. Add new TrackAttachmentWithMode for RWX-aware tracking:
+
+```go
+// TrackAttachmentWithMode records that a volume is attached to a node with access mode awareness.
+// accessMode should be "RWO" or "RWX" to determine if dual-attach is allowed later.
+func (am *AttachmentManager) TrackAttachmentWithMode(ctx context.Context, volumeID, nodeID, accessMode string) error {
     am.volumeLocks.Lock(volumeID)
     defer am.volumeLocks.Unlock(volumeID)
 
@@ -201,7 +214,7 @@ func (am *AttachmentManager) TrackAttachment(ctx context.Context, volumeID, node
 
     klog.V(2).Infof("Tracked attachment: volume=%s, node=%s, accessMode=%s (primary)", volumeID, nodeID, accessMode)
 
-    // Persist to PV annotations
+    // Persist to PV annotations (outside of lock - I/O operation)
     if err := am.persistAttachment(ctx, volumeID, nodeID); err != nil {
         am.mu.Lock()
         delete(am.attachments, volumeID)
@@ -213,7 +226,7 @@ func (am *AttachmentManager) TrackAttachment(ctx context.Context, volumeID, node
 }
 ```
 
-2. Add AddSecondaryAttachment for RWX migration:
+3. Add AddSecondaryAttachment for RWX migration:
 
 ```go
 // AddSecondaryAttachment adds a second node attachment for RWX volumes during migration.
@@ -252,7 +265,7 @@ func (am *AttachmentManager) AddSecondaryAttachment(ctx context.Context, volumeI
 }
 ```
 
-3. Add helper to check node count:
+4. Add helper methods:
 
 ```go
 // GetNodeCount returns the number of nodes a volume is attached to.
@@ -276,9 +289,20 @@ func (am *AttachmentManager) IsAttachedToNode(volumeID, nodeID string) bool {
     }
     return false
 }
+
+// GetAccessMode returns the access mode for a tracked volume.
+func (am *AttachmentManager) GetAccessMode(volumeID string) string {
+    am.mu.RLock()
+    defer am.mu.RUnlock()
+
+    if state, exists := am.attachments[volumeID]; exists {
+        return state.AccessMode
+    }
+    return ""
+}
 ```
 
-4. Update UntrackAttachment to handle multi-node detach (remove specific node, not all):
+5. Add RemoveNodeAttachment for partial detach:
 
 ```go
 // RemoveNodeAttachment removes a specific node's attachment from a volume.
@@ -328,18 +352,17 @@ func (am *AttachmentManager) RemoveNodeAttachment(ctx context.Context, volumeID,
     return false, nil
 }
 ```
-
-Note: Keep the existing UntrackAttachment for backward compatibility but it now fully removes all attachments.
   </action>
   <verify>
 Run `go build ./pkg/attachment/...` to verify no syntax errors.
-Run `make test` to ensure existing tests pass.
+Run `make test` to ensure existing tests pass (existing TrackAttachment callers unchanged).
   </verify>
   <done>
-- TrackAttachment initializes Nodes slice with first node
+- TrackAttachment signature UNCHANGED for backward compatibility
+- TrackAttachmentWithMode added for access-mode-aware tracking
 - AddSecondaryAttachment allows second node for RWX with 2-node limit
 - RemoveNodeAttachment removes specific node, tracks if last node
-- GetNodeCount and IsAttachedToNode helpers added
+- GetNodeCount, IsAttachedToNode, GetAccessMode helpers added
   </done>
 </task>
 
@@ -347,24 +370,9 @@ Run `make test` to ensure existing tests pass.
   <name>Task 3: Update ControllerPublishVolume for RWX dual-attach</name>
   <files>pkg/driver/controller.go</files>
   <action>
-Modify ControllerPublishVolume to handle RWX dual-attachment:
+Modify ControllerPublishVolume to handle RWX dual-attachment. Use inline access mode check since ControllerPublishVolume uses singular VolumeCapability (not the plural slice used in CreateVolume).
 
-1. Add helper to extract access mode from capabilities:
-
-```go
-// getAccessMode extracts the access mode from volume capabilities.
-// Returns "RWX" for MULTI_NODE_MULTI_WRITER, "RWO" otherwise.
-func (cs *ControllerServer) getAccessMode(caps []*csi.VolumeCapability) string {
-    for _, cap := range caps {
-        if cap.GetAccessMode().GetMode() == csi.VolumeCapability_AccessMode_MULTI_NODE_MULTI_WRITER {
-            return "RWX"
-        }
-    }
-    return "RWO"
-}
-```
-
-2. Update ControllerPublishVolume to handle RWX differently:
+1. Update ControllerPublishVolume to handle RWX differently (starting around line 446):
 
 ```go
 func (cs *ControllerServer) ControllerPublishVolume(ctx context.Context, req *csi.ControllerPublishVolumeRequest) (*csi.ControllerPublishVolumeResponse, error) {
@@ -374,15 +382,31 @@ func (cs *ControllerServer) ControllerPublishVolume(ctx context.Context, req *cs
 
     klog.V(2).Infof("ControllerPublishVolume called for volume %s to node %s", volumeID, nodeID)
 
-    // ... existing validation ...
+    // ... existing validation (keep as-is) ...
 
-    // Determine access mode from capabilities
-    accessMode := cs.getAccessMode(req.GetVolumeCapability())
-    isRWX := accessMode == "RWX"
+    // Determine access mode from VolumeCapability (singular, not slice)
+    // ControllerPublishVolume uses GetVolumeCapability() which returns a single capability
+    accessMode := "RWO"
+    isRWX := false
+    if cap := req.GetVolumeCapability(); cap != nil {
+        if cap.GetAccessMode().GetMode() == csi.VolumeCapability_AccessMode_MULTI_NODE_MULTI_WRITER {
+            accessMode = "RWX"
+            isRWX = true
+        }
+    }
+
+    // ... existing VMI lock acquisition (keep as-is) ...
+
+    // Verify volume exists on RDS
+    volume, err := cs.driver.rdsClient.GetVolume(volumeID)
+    if err != nil {
+        return nil, status.Errorf(codes.NotFound, "volume %s not found: %v", volumeID, err)
+    }
 
     // Get attachment manager
     am := cs.driver.GetAttachmentManager()
     if am == nil {
+        // No attachment manager = skip tracking (single-node scenario or disabled)
         klog.V(3).Infof("Attachment manager not available, skipping tracking for volume %s", volumeID)
         return &csi.ControllerPublishVolumeResponse{
             PublishContext: cs.buildPublishContext(volume, req.GetVolumeContext()),
@@ -429,7 +453,7 @@ func (cs *ControllerServer) ControllerPublishVolume(ctx context.Context, req *cs
             }, nil
         }
 
-        // RWO: Check grace period first (existing behavior)
+        // RWO: Check grace period first (existing behavior - keep as-is)
         gracePeriod := cs.driver.GetAttachmentGracePeriod()
         if gracePeriod > 0 && am.IsWithinGracePeriod(volumeID, gracePeriod) {
             // ... existing grace period handling ...
@@ -450,23 +474,31 @@ func (cs *ControllerServer) ControllerPublishVolume(ctx context.Context, req *cs
             volumeID, existing.NodeID)
     }
 
-    // No existing attachment - track new primary attachment
-    if err := am.TrackAttachment(ctx, volumeID, nodeID, accessMode); err != nil {
+    // No existing attachment - track new primary attachment with access mode
+    if err := am.TrackAttachmentWithMode(ctx, volumeID, nodeID, accessMode); err != nil {
         // ... existing error handling ...
     }
 
-    // ... rest of existing code ...
+    // ... rest of existing code (metrics, events, return) ...
 }
 ```
 
-3. Update ControllerUnpublishVolume to use RemoveNodeAttachment:
+2. Update ControllerUnpublishVolume to use RemoveNodeAttachment (starting around line 594):
 
 ```go
 func (cs *ControllerServer) ControllerUnpublishVolume(ctx context.Context, req *csi.ControllerUnpublishVolumeRequest) (*csi.ControllerUnpublishVolumeResponse, error) {
-    // ... existing validation ...
+    startTime := time.Now()
+    volumeID := req.GetVolumeId()
+    nodeID := req.GetNodeId()
 
+    klog.V(2).Infof("ControllerUnpublishVolume called for volume %s from node %s", volumeID, nodeID)
+
+    // ... existing validation (keep as-is) ...
+
+    // Get attachment manager
     am := cs.driver.GetAttachmentManager()
     if am == nil {
+        klog.V(3).Infof("Attachment manager not available, skipping untrack for volume %s", volumeID)
         return &csi.ControllerUnpublishVolumeResponse{}, nil
     }
 
@@ -495,28 +527,18 @@ func (cs *ControllerServer) ControllerUnpublishVolume(ctx context.Context, req *
 }
 ```
 
-4. Also update the getAccessMode call to use GetVolumeCapability() properly - the CSI spec uses singular VolumeCapability for publish:
-
-```go
-// For ControllerPublishVolume, use the single VolumeCapability from the request
-accessMode := "RWO"
-if req.GetVolumeCapability() != nil {
-    if req.GetVolumeCapability().GetAccessMode().GetMode() == csi.VolumeCapability_AccessMode_MULTI_NODE_MULTI_WRITER {
-        accessMode = "RWX"
-    }
-}
-```
+NOTE: The access mode is determined inline from `req.GetVolumeCapability().GetAccessMode().GetMode()` - NOT from a helper function with mismatched types.
   </action>
   <verify>
 Run `go build ./...` to verify no syntax errors.
 Run `make test` to ensure existing tests pass.
   </verify>
   <done>
-- ControllerPublishVolume detects RWX access mode
+- ControllerPublishVolume determines RWX access mode inline from singular VolumeCapability
 - RWX volumes allow second attachment via AddSecondaryAttachment
 - RWX 3rd attachment rejected with migration-aware error
 - RWO conflict error hints about RWX
-- ControllerUnpublishVolume uses RemoveNodeAttachment
+- ControllerUnpublishVolume uses RemoveNodeAttachment for partial detach support
 - Distinct log entries for RWX dual-attach vs RWO conflict
   </done>
 </task>
@@ -533,6 +555,7 @@ Run `make test` to ensure existing tests pass.
 
 <success_criteria>
 - AttachmentState tracks ordered Nodes slice (primary/secondary)
+- TrackAttachment signature unchanged (backward compatible)
 - AddSecondaryAttachment enforces 2-node limit
 - ControllerPublishVolume allows RWX second attach
 - ControllerPublishVolume rejects RWX 3rd attach with migration-aware message
