docs(09): create phase plan for Migration Safety
Phase 09: Migration Safety
- 4 plans in 3 waves
- Plan 01 (Wave 1): Extend AttachmentState for migration tracking
- Plan 02 (Wave 2): Separate migration timeout from RWO conflict
- Plan 03 (Wave 2): Device-in-use verification in NodeUnstageVolume
- Plan 04 (Wave 3): Comprehensive unit tests

Requirements covered: SAFETY-01, SAFETY-02, SAFETY-03, SAFETY-04
Ready for execution

--- a/.planning/milestones/v0.5-ROADMAP.md
+++ b/.planning/milestones/v0.5-ROADMAP.md
@@ -2,7 +2,7 @@
 
 **Status:** In Progress
 **Phases:** 8-10
-**Total Plans:** 3 (Phase 8) + TBD (Phases 9-10)
+**Total Plans:** 3 (Phase 8) + 4 (Phase 9) + TBD (Phase 10)
 
 ## Overview
 
@@ -23,9 +23,9 @@ This roadmap enables KubeVirt VM live migration with RDS CSI volumes. Three phas
 4. ControllerGetCapabilities declares MULTI_NODE_MULTI_WRITER for block volumes only
 
 Plans:
-- [ ] 08-01-PLAN.md — Add MULTI_NODE_MULTI_WRITER capability and RWX block-only validation
-- [ ] 08-02-PLAN.md — Modify AttachmentManager to allow 2-node attachment for RWX block volumes
-- [ ] 08-03-PLAN.md — Comprehensive unit tests
+- [x] 08-01-PLAN.md — Add MULTI_NODE_MULTI_WRITER capability and RWX block-only validation
+- [x] 08-02-PLAN.md — Modify AttachmentManager to allow 2-node attachment for RWX block volumes
+- [x] 08-03-PLAN.md — Comprehensive unit tests
 
 **Details:**
 - Add `MULTI_NODE_MULTI_WRITER` to driver vcaps array in pkg/driver/driver.go
@@ -37,7 +37,7 @@ Plans:
 **Goal**: Migration dual-attachment is distinguishable from RWO conflicts with appropriate timeout and cleanup behavior
 **Depends on**: Phase 8
 **Requirements**: SAFETY-01, SAFETY-02, SAFETY-03, SAFETY-04
-**Plans**: TBD
+**Plans**: 4 plans in 3 waves
 
 **Success Criteria** (what must be TRUE):
 1. Migration timeout (5 min default, configurable via StorageClass) allows dual-attachment window without triggering conflict
@@ -52,12 +52,14 @@ Plans:
 - [ ] 09-04-PLAN.md — Comprehensive unit tests
 
 **Details:**
-- Extend AttachmentState struct with secondary attachment node ID and migration start timestamp
-- StorageClass parameter `migrationTimeoutSeconds` (default 300)
+- Extend AttachmentState struct with MigrationStartedAt timestamp and MigrationTimeout duration
+- StorageClass parameter `migrationTimeoutSeconds` (default 300, range 30-3600)
+- ParseMigrationTimeout validates and clamps timeout to safe range
 - Migration detection: RWX block volume + 2-node attachment pattern
+- Timed-out migrations reject new secondary attachments with clear error
 - Non-migration RWO conflicts fail immediately (existing behavior preserved)
-- Reconciler cleans up migrations that exceed timeout
-- Check `/proc/*/fd` or lsof equivalent before NVMe disconnect
+- CheckDeviceInUse via lsof (5s timeout) before NVMe disconnect
+- Migration state cleared automatically when source node detaches
 
 ### Phase 10: Observability
 **Goal**: Operators can monitor migrations and users understand safe RWX usage
